@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: tk.decls,v 1.46 2009/01/02 23:20:32 nijtmans Exp $
+# RCS: @(#) $Id: tk.decls,v 1.47 2009/02/27 23:23:35 nijtmans Exp $
 
 library tk
 
@@ -208,7 +208,7 @@ declare 43 generic {
 	    const char *pathName, const char *screenName)
 }
 declare 44 generic {
-    int Tk_DefineBitmap(Tcl_Interp *interp, const char *name,
+    int Tk_OldDefineBitmap(Tcl_Interp *interp, const char *name,
 	    const char *source, int width, int height)
 }
 declare 45 generic {
@@ -360,7 +360,7 @@ declare 85 generic {
     Pixmap Tk_GetBitmap(Tcl_Interp *interp, Tk_Window tkwin, const char * str)
 }
 declare 86 generic {
-    Pixmap Tk_GetBitmapFromData(Tcl_Interp *interp,
+    Pixmap Tk_OldGetBitmapFromData(Tcl_Interp *interp,
 	    Tk_Window tkwin, const char *source, int width, int height)
 }
 declare 87 generic {
@@ -1072,6 +1072,17 @@ declare 272 generic {
 }
 declare 273 generic {
     void Tk_CreateOldPhotoImageFormat(const Tk_PhotoImageFormat *formatPtr)
+}
+
+# See [Enhancement request 2636558] Tk_DefineBitmap and
+# Tk_GetBitmapFromData signature problem
+declare 274 generic {
+    int Tk_DefineBitmap(Tcl_Interp *interp, const char *name,
+	    const void *source, int width, int height)
+}
+declare 275 generic {
+    Pixmap Tk_GetBitmapFromData(Tcl_Interp *interp,
+	    Tk_Window tkwin, const void *source, int width, int height)
 }
 
 # Define the platform specific public Tk interface.  These functions are
